--- a/Solution1/Application/MainWindow.xaml
+++ b/Solution1/Application/MainWindow.xaml
@@ -5,8 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Application"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="Twitter App" Height="600" Width="350">
+    <Frame Name="NavigationFrame"></Frame>
 </Window>
