--- a/Solution1/Application/App.xaml
+++ b/Solution1/Application/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Application.App"
+﻿<Application x:Class="application.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Application"
+             xmlns:local="clr-namespace:application"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
