added pages, models and services

--- a/Solution1/Application/Pages/Login.xaml
+++ b/Solution1/Application/Pages/Login.xaml
@@ -10,13 +10,19 @@
 
     <Grid Background="White">
         <StackPanel VerticalAlignment="Center" Margin="15">
-            <Label Foreground="#3498db" Content="Twitter App" HorizontalAlignment="Center" Margin="0, 0, 0, 25" FontSize="36"/>
+            <Label Foreground="#3498db" Content="Twitter" FontSize="72"
+                   HorizontalAlignment="Center" Margin="0, 0, 0, 50" />
             <Label Foreground="Gray" Content="Username"/>
             <TextBox Padding="8" Margin="0, 0, 0, 10"/>
             <Label Foreground="Gray" Content="Password"/>
             <PasswordBox Padding="8" Margin="0, 0, 0, 10"/>
-            <Button Content="Login" Padding="25, 8" HorizontalAlignment="Left" Margin="0, 0, 0, 10" Background="#3498db" Foreground="White" BorderThickness="0"/>
-            <Button Content="Or Create An Account" Padding="25, 8" HorizontalAlignment="Left" Background="#2ecc71" Foreground="White" BorderThickness="0"/>
+            <Grid>
+                <Button Content="Login" Padding="25, 8" HorizontalAlignment="Left" 
+                    Background="#3498db" Foreground="White" BorderThickness="0" />
+                <Button Content="Or Create An Account" Padding="25, 8" 
+                    HorizontalAlignment="Right" Background="#2ecc71" 
+                    Foreground="White" BorderThickness="0"/>
+            </Grid>
         </StackPanel>
     </Grid>
 </Page>
